--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -5,7 +5,7 @@
     <title>todo-list</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="container-fluid">
     <app></app>
     <!-- built files will be auto injected -->
   </body>
